--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,7 +4,7 @@
 }
 
 .header {
-  background-color: #5e6b6dab;
+  background-color: #495464;
   height: 20vh;
   display: flex;
   align-items: center;
@@ -14,16 +14,24 @@
 .header h1 {
   font-family: "Poller One", cursive;
   text-align: center;
-  color: #e7e6e1;
+  color: #e8e8e8;
 }
 
 .main-div {
-  margin: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.formulario {
+  margin-top: 10px;
+  margin-bottom: 10px;
+  width: 75%;
 }
 
 .formulario-metadata {
   padding: 10px;
-  background-color: #f2a154;
+  background-color: #f5a962;
 }
 
 .formulario-metadata label {
@@ -59,14 +67,19 @@
   cursor: pointer;
   border: 2px;
   border-radius: 5px;
-  background-color: #f2a154;
+  background-color: #bbbfca;
 }
 
+.history {
+  width: 100%;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
 .history h2 {
   font-size: 30px;
   text-align: center;
   padding: 10px;
-  background-color: #e7e6e1;
+  background-color: #f5a962;
 }
 
 #listaPacientesFecha ul {
@@ -80,7 +93,7 @@
 }
 
 .footer {
-  background-color: #314e52ab;
+  background-color: #495464;
   height: 20vh;
   display: flex;
   align-items: center;
@@ -91,5 +104,14 @@
   font-family: "Poller One", cursive;
   font-size: 15px;
   text-align: center;
-  color: #e7e6e1;
+  color: #e8e8e8;
+}
+
+.btn-total {
+  width: 100%;
+  font-size: 30px;
+  cursor: pointer;
+  border: 2px;
+  border-radius: 5px;
+  background-color: #bbbfca;
 }
