--- a/stylesheet.css
+++ b/stylesheet.css
@@ -101,6 +101,10 @@
   background-color: #90aacb;
 }
 
+#infoBtnHide {
+  width: 100%;
+}
+
 #btnHide {
   margin-top: 10px;
   margin-bottom: 10px;
@@ -110,41 +114,19 @@
   cursor: pointer;
   border: 2px;
   border-radius: 5px;
-  background-color: #90aacb;
+  background-color: #bbbfca;
 }
 
 #divInfo {
   display: flex;
   flex-direction: column;
+  align-content: space-around;
   align-items: center;
-  justify-content: center;
 }
 
-#tablas {
+.tablas-container {
   display: flex;
-  flex-direction: row;
-  align-items: baseline;
-  justify-content: space-between;
-}
-
-#tableDr {
-  width: fit-content;
-  margin: 10px;
-}
-
-#tableConsultas {
-  width: fit-content;
-  margin: 10px;
-}
-
-#tableCirugias {
-  width: fit-content;
-  margin: 10px;
-}
-
-#tableEstudios {
-  width: fit-content;
-  margin: 10px;
+  flex-direction: column;
 }
 
 #valores {
