--- a/stylesheet.css
+++ b/stylesheet.css
@@ -127,15 +127,29 @@
 .tablas-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: baseline;
+  align-content: space-between;
 }
 
-#valores {
-  text-align: center;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  padding: 10px;
-  width: 100%;
-  font-size: 10px;
+#tableDr {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#tableConsultas {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#tableEstudios {
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+#tableCirugias {
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 table.Rows {
